--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<p><a href="https://github.com/yrryyhh/zen.github.io/blob/main/task/20213631-20230912.html" alt="">第二次作业</a></p>
-<p><a href="https://github.com/yrryyhh/zen.github.io/blob/main/task/20213631-20230919.html" alt="">第三次作业</a></p>
+<p><a href="task/20213631-20230912.html" alt="">第二次作业</a></p>
+<p><a href="task/20213631-20230919.html" alt="">第三次作业</a></p>
