--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
-<p><a href="task/20213631-20230909.txt" alt="">第二次作业</a></p>
-<p><a href="task/20213631-20230912.html" alt="">第二次作业</a></p>
-<p><a href="task/20213631-20230919.html" alt="">第三次作业</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>zen</title>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+</head>
+<body>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">序号</th>
+        <th scope="col">作业名称</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td><a href="task/20213631-20230909.txt">第一次作业</a></td>
+
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td><a href="task/20213631-20230912.html">第二次作业</a></td>
+
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td><a href="task/20213631-20230919.html">第三次作业</a></td>
+
+    </tr>
+    <tr>
+        <th scope="row">4</th>
+        <td><a href="task/20213631-20230926.html">第四次作业</a></td>
+
+    </tr>
+    </tbody>
+</table>
+
+
+</body>
+</html>
