--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <tbody>
     <tr>
         <th scope="row">1</th>
-        <td><a href="task/20213631-20230909.txt">第一次作业</a></td>
+        <td><a href="task/20213631-20230905.html">第一次作业</a></td>
 
     </tr>
     <tr>
