--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <td><a href="task/20213631-20231010.html">第五次作业</a></td>
 
     </tr>
+    <tr>
+        <th scope="row">6</th>
+        <td><a href="task/20213631-20231018.html">第六次作业</a></td>
+
+    </tr>
     </tbody>
 </table>
 
