--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <td><a href="task/20213631-20231018.html">第六次作业</a></td>
 
     </tr>
+    <tr>
+        <th scope="row">7</th>
+        <td><a href="task/20213631-20231022.html">第七次作业</a></td>
+
+    </tr>
     </tbody>
 </table>
 
