--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         <td><a href="task/20213631-20231022.html">第七次作业</a></td>
 
     </tr>
+    <tr>
+        <th scope="row">7</th>
+        <td><a href="task/20213631-20231026.html">第八次作业</a></td>
+
+    </tr>
     </tbody>
 </table>
 
