--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         <td><a href="task/20213631-20231026.html">第八次作业</a></td>
 
     </tr>
+    <tr>
+        <th scope="row">8</th>
+        <td><a href="task/20213631-20231109.html">第八次作业</a></td>
+
+    </tr>
     </tbody>
 </table>
 
