--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
 
     </tr>
     <tr>
-        <th scope="row">7</th>
+        <th scope="row">8</th>
         <td><a href="task/20213631-20231026.html">第八次作业</a></td>
 
     </tr>
     <tr>
-        <th scope="row">8</th>
+        <th scope="row">9</th>
         <td><a href="task/20213631-20231109.html">第九次作业</a></td>
+
+    </tr>
+    <tr>
+    <th scope="row">10</th>
+    <td><a href="ks.html">第十次作业</a></td>
 
     </tr>
     </tbody>
